--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
                 
                 <div class="col s12">
-                    <ul class="collection">
+                    <ul id="shopping_list" class="collection">
                         <li class="collection-item">Sabão</li>
                         <li class="collection-item">Cloro</li>
                         <li class="collection-item">Detergente</li>
@@ -32,7 +32,7 @@
                                 <label for="shopping_item">Item para Compra</label>
                             </div>
                             <div class="col s2">
-                                <button class="btn waves-effect waves-light">
+                                <button id="btn_add" class="btn waves-effect waves-light">
                                     Adicionar
                                     <i class="material-icons">add</i>
                                 </button>
@@ -45,5 +45,7 @@
 
         <!-- Compiled and minified JavaScript -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+        <script src="./scripts.js"></script>
     </body>
 </html>
