--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="col s12">
-                    <form>
+                    <form id="shopping_list_form">
                         <div class="row">
                             <div class="input-field col s10">
                                 <input type="text" name="shopping_item" id="shopping_item" class="validate" placeholder="Digite um item para comprar">
