added btn remove

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
                 </div>
                 
                 <div class="col s12">
+                    <h3>Itens</h3>
                     <ul id="shopping_list" class="collection">
-                        <li class="shopping-list-items collection-item">Sabão</li>
-                        <li class="shopping-list-items collection-item">Cloro</li>
-                        <li class="shopping-list-items collection-item">Detergente</li>
+                        
                     </ul>
                 </div>
 
